# jupyterhub

./: LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup-dev.sh
.github/workflows/: ci.yml
docker/: Dockerfile.api  Dockerfile.ui
docs/: api-reference.md  architecture.md  configuration.md  usage-examples.md
helm/: Chart.yaml  values.yaml
helm/templates/: deployment-api.yaml
jupyterhub_manager/: __init__.py  models.py  settings.py
jupyterhub_manager/api/: main.py
jupyterhub_manager/client/: base.py
jupyterhub_manager/ui/: app.py
k8s/: deployment-api.yaml  deployment-ui.yaml
tests/: test_client.py  test_comprehensive.py  test_health.py  test_users.py
