[project]
name = "jupyterhub-manager"
version = "0.1.0"
description = "Python module + FastAPI + Streamlit UI to manage a JupyterHub instance via its REST API"
authors = [ { name = "Your Name", email = "you@example.com" } ]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
keywords = ["jupyterhub", "fastapi", "streamlit", "admin", "api client"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Framework :: FastAPI",
  "Framework :: Jupyter",
  "Framework :: AsyncIO"
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://example.com/docs"
Repository = "https://example.com/repo"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff", "mypy", "types-requests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
